--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
+    "build-storybook": "build-storybook",
     "build:scss:types": "typed-scss-modules src",
     "dev": "vite",
     "format": "prettier --write src",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "prepare": "husky install",
     "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
     "test": "jest"
   },
   "lint-staged": {
@@ -35,6 +37,14 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@crxjs/vite-plugin": "^1.0.14",
+    "@storybook/addon-actions": "^6.5.13",
+    "@storybook/addon-essentials": "^6.5.13",
+    "@storybook/addon-interactions": "^6.5.13",
+    "@storybook/addon-links": "^6.5.13",
+    "@storybook/builder-vite": "^0.2.5",
+    "@storybook/react": "^6.5.13",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/testing-react": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
@@ -58,6 +68,7 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-storybook": "^0.6.6",
     "eslint-plugin-testing-library": "^5.9.1",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
