--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Next Devtools",
+  "name": "Next DevTools",
   "version": "1.0.0",
-  "minimum_chrome_version": "10.0",
+  "minimum_chrome_version": "88.0",
   "devtools_page": "src/next-devtools.html",
   "action": {
     "default_icon": {
