ci: add semantic-release

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@crxjs/vite-plugin": "^1.0.14",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/git": "^10.0.1",
     "@storybook/addon-actions": "^6.5.13",
     "@storybook/addon-essentials": "^6.5.13",
     "@storybook/addon-interactions": "^6.5.13",
@@ -79,6 +81,7 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
+    "semantic-release": "^19.0.5",
     "sort-package-json": "^2.0.0",
     "ts-jest": "^29.0.3",
     "typed-scss-modules": "^7.0.1",
