chore: add schema

--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,6 @@
 {
+  "$schema": "https://json.schemastore.org/chrome-manifest",
+  "version": "0.0.0",
   "manifest_version": 3,
   "name": "Next DevTools",
   "minimum_chrome_version": "88.0",
