--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,13 @@
     "import/newline-after-import": "error",
     "import/no-duplicates": "error",
     "import/no-named-as-default-member": "off",
+    "no-unused-vars": ["off"],
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      {
+        "varsIgnorePattern": "^_"
+      }
+    ],
     "react/jsx-sort-props": [
       "warn",
       {
