--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-accessible-treeview": "^2.3.1",
     "react-dom": "^18.2.0",
     "webextension-polyfill": "^0.10.0"
   },
