--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 18.x
       - name: Install
-        run: yarn install && husky uninstall
+        run: yarn install && yarn run husky uninstall
       - name: Build
         run: yarn build
       - name: Semantic Release
